# suctorian_viewer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
datasets/: sc_dynamics_um.csv
suctorian_viewer/: __init__.py  __main__.py  _morphospace_coordinates.py  suctorian_viewer.py
